updated the layout

--- a/src/featured.html
+++ b/src/featured.html
@@ -1,19 +1,16 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Best Sellers | Stores"}'>
+<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Featured"}'>
 </include>
 
 <section class="sub-page-header-section img-bg">
     <include src="src/layouts/main-header.html"></include>
 
     <div class="bg-img-wrapper">
-        <img src="assets/img/best-sellers-bg.jpg" alt="">
+        <img class="featured-img" src="assets/img/featured.jpg" alt="">
     </div>
 
     <div class="bg-img-text-block container text-center">
-        <h1 class="font-weight-bold mb-4">Best Sellers</h1>
-        <h4 class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae
-            minus
-            optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
-            quasi incidunt quidem.</h4>
+        <h1 class="font-weight-bold mb-4">Featured</h1>
+        <h4 class="mb-5">Browse through some of the best brands around and take your pick!</h4>
         <a href="stores.html" class="mp-btn">Store directory</a>
     </div>
 </section>
@@ -22,134 +19,26 @@
 
     <div class="category-block">
 
-        <div class="content-wrapper px-3 px-sm-0 mt-5">
-            <div class="store-block store-block--grid">
+        <div class="continer-fluid mt-5">
+            <div class="store-block">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/zigzag.jpg" alt="">
+                        <img src="assets/img/stores/LuvEsence.png" alt="">
                         <div class="store-link">
-                            <a href="http://zigzag.lk" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="">
+                            <a href="https://www.luvesence.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/luv_esence.png" alt="Luvesence">
                             </a>
                         </div>
                     </div>
-                    <h5 class="store-title mt-3">ZIGZAG</h5>
+                    <h5 class="store-title mt-3">LuvEsence</h5>
                 </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/zigma-jones.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://zigmajones.com/" target="_blank">
-                                <img class="rectangular-logo" src="assets/img/stores/logos/zigmajones.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Zigma Jones</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/thirteen31.png" alt="">
-                        <div class="store-link">
-                            <a href="https://www.thirteen31.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Thirteen Thirty One</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/stripes-checks.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://stripesandchecksinc.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Stripes & Checks Inc</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/ekko.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://www.ekko.style/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Ekko</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/glitteray.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://www.glitterayjewellery.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/glitteray.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Glitteray</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/iris-garden.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://irisgarden.lk/" target="_blank">
-                                <img class="square-logo" src="assets/img/stores/logos/iris-garden.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Iris Garden</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/urban.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://urban.lk/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/urbanlk.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Urban</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/dilfer.png" alt="">
-                        <div class="store-link">
-                            <a href="https://www.dilferclothing.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/dilfer.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Dilfer</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/emaan.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://www.emaanqirat.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/emaan.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Emaan Qirat</h5>
-                </div>
-
+                
                 <div class="store-block__item">
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/prime-culture.jpg" alt="">
                         <div class="store-link">
                             <a href="https://primeculture.co/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/prime_culture.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/prime_culture.png" alt="primeclothing, workout attire">
                             </a>
                         </div>
                     </div>
@@ -167,6 +56,55 @@
                     </div>
                     <h5 class="store-title mt-3">Clubhouse Vivaldi</h5>
                 </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/four_elements.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://fourelements.lk/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/four_elements.png" alt="face wash,beauty">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Four Elements</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/spa-ceylon.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://lk.spaceylon.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/spa.png" alt="spaceylon">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">SPA CEYLON</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/zigzag-old.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://zigzag.lk" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="zigzag">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">ZIGZAG</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/stripes-checks.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://stripesandchecksinc.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="stripesandchecks">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Stripes & Checks Inc</h5>
+                </div>
+
             </div>
         </div>
     </div>
