--- a/src/men.html
+++ b/src/men.html
@@ -19,8 +19,8 @@
 
     <div class="category-block">
 
-        <div class="content-wrapper px-3 px-sm-0 mt-5">
-            <div class="store-block store-block--grid">
+        <div class="continer-fluid mt-5">
+            <div class="store-block">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/stripes_and_checks.jpg" alt="">
