--- a/src/stores.html
+++ b/src/stores.html
@@ -38,54 +38,58 @@
         </div>
 
         <div class="continer-fluid mt-5">
+            <div class="mobile-view-more d-flex justify-content-end px-4">
+                <a href="featured.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
+            </div>
             <div class="store-block">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/spa-ceylon.jpg" alt="">
+                        <img src="assets/img/stores/LuvEsence.png" alt="">
                         <div class="store-link">
-                            <a href="https://lk.spaceylon.com/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/spa.png" alt="spaceylon">
+                            <a href="https://www.luvesence.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/luv_esence.png" alt="Luvesence">
                             </a>
                         </div>
                     </div>
-                    <h5 class="store-title mt-3">SPA CEYLON</h5>
+                    <h5 class="store-title mt-3">LuvEsence</h5>
                 </div>
-
+                
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/zigzag-old.jpg" alt="">
+                        <img src="assets/img/stores/prime-culture.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://zigzag.lk" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="zigzag">
+                            <a href="https://primeculture.co/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/prime_culture.png" alt="primeclothing, workout attire">
                             </a>
                         </div>
                     </div>
-                    <h5 class="store-title mt-3">ZIGZAG</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/stripes-checks.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://stripesandchecksinc.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="stripesandchecks,shirts">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Stripes & Checks Inc</h5>
+                    <h5 class="store-title mt-3">Prime Culture</h5>
                 </div>
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/clubhouse.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://www.clubhousevivaldi.lk/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/clubhouse.png" alt="clubhouse,underwear">
+                            <a href="https://www.clubhousevivaldi.com/" target="_blank">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/clubhouse.png" alt="">
                             </a>
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Clubhouse Vivaldi</h5>
                 </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/four_elements.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://fourelements.lk/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/four_elements.png" alt="face wash,beauty">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Four Elements</h5>
+                </div>
+
             </div>
         </div>
     </div>
@@ -142,7 +146,7 @@
                         <img src="assets/img/stores/will-by-zac.jpg" alt="">
                         <div class="store-link">
                             <a href="https://willbyzac.com/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/will-by-zac.png" alt="willbyzac, dress, linen">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/will-by-zac.png" alt="willbyzac, dress, linen">
                             </a>
                         </div>
                     </div>
@@ -221,13 +225,16 @@
         </div>
 
         <div class="continer-fluid mt-5">
+            <div class="mobile-view-more d-flex justify-content-end px-4">
+                <a href="beauty_and_fragrance.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
+            </div>
             <div class="store-block store-page">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/spa-ceylon.jpg" alt="">
                         <div class="store-link">
                             <a href="https://lk.spaceylon.com/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/spa.png" alt="spaceylon">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/spa.png" alt="spaceylon">
                             </a>
                         </div>
                     </div>
