--- a/src/women.html
+++ b/src/women.html
@@ -19,8 +19,8 @@
 
     <div class="category-block">
 
-        <div class="content-wrapper px-3 px-sm-0 mt-5">
-            <div class="store-block store-block--grid">
+        <div class="continer-fluid mt-5">
+            <div class="store-block">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/zigzag.jpg" alt="">
@@ -62,7 +62,7 @@
                         <img src="assets/img/stores/will-by-zac.jpg" alt="">
                         <div class="store-link">
                             <a href="https://willbyzac.com/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/will-by-zac.png" alt="willbyzac,designerwear">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/will-by-zac.png" alt="willbyzac,designerwear">
                             </a>
                         </div>
                     </div>
