--- a/src/index.html
+++ b/src/index.html
@@ -183,11 +183,14 @@
             <img class="rectangular-logo px-4 px-md-5" src="assets/img/stores/logos/strips.png" alt="">
             <img class="square-logo px-4 px-md-5" src="assets/img/stores/logos/urbanlk.png" alt="">
             <img class="rectangular-logo px-4 px-md-5" src="assets/img/stores/logos/zigzag.png" alt="">
+            <img class="rectangular-logo px-4 px-md-5" src="assets/img/stores/logos/luv_esence.png" alt="">
             <img class="square-logo px-4 px-md-5" src="assets/img/stores/logos/clubhouse.png" alt="">
             <img class="rectangular-logo px-4 px-md-5" src="assets/img/stores/logos/spa.png" alt="">
             <img class="invert-color square-logo px-4 px-md-5" src="assets/img/stores/logos/iris-garden.png" alt="">
             <img class="invert-color rectangular-logo px-4 px-md-5" src="assets/img/stores/logos/zigmajones.png" alt="">
             <img class="square-logo px-4 px-md-5" src="assets/img/stores/logos/ekko.png" alt="">
+            <img class="square-logo px-4 px-md-5" src="assets/img/stores/logos/ancient.png" alt="">
+            <img class="square-logo px-4 px-md-5" src="assets/img/stores/logos/four_elements.png" alt="">
             <img class="long-rectangular-logo px-4 px-md-5" src="assets/img/stores/logos/emaan.png" alt="">
             <img class="invert-color rectangular-logo px-4 px-md-5" src="assets/img/stores/logos/FOA.png" alt="">
             <img class="rectangular-logo px-4 px-md-5" src="assets/img/stores/logos/glitteray.png" alt="">
