--- a/src/men.html
+++ b/src/men.html
@@ -92,6 +92,30 @@
                     </div>
                     <h5 class="store-title mt-3">Clubhouse Vivaldi</h5>
                 </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/vyboo.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://vyboo.lk/" target="_blank">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/vyboo_logo.png" alt="Vyboo, t-shirts, plain t-shirts">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">VYBOO</h5>
+                </div>
+
+                 <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/allude_men.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://allude.lk/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/allude_logo.png" alt="Allude, dress">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Allude</h5>
+                </div>
             </div>
         </div>
     </div>
