--- a/src/stores.html
+++ b/src/stores.html
@@ -44,28 +44,28 @@
             <div class="store-block">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/LuvEsence.png" alt="">
+                        <img src="assets/img/stores/spa-ceylon.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://www.luvesence.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/luv_esence.png" alt="Luvesence">
+                            <a href="https://lk.spaceylon.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/spa.png" alt="spaceylon">
                             </a>
                         </div>
                     </div>
-                    <h5 class="store-title mt-3">LuvEsence</h5>
-                </div>
-                
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/prime-culture.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://primeculture.co/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/prime_culture.png" alt="primeclothing, workout attire">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Prime Culture</h5>
+                    <h5 class="store-title mt-3">SPA CEYLON</h5>
                 </div>
 
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/zigzag-old.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://zigzag.lk" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="zigzag">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">ZIGZAG</h5>
+                </div>                
+                
                 <div class="store-block__item">
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/clubhouse.jpg" alt="">
@@ -88,6 +88,70 @@
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Four Elements</h5>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="category-block">
+        <div class="container">
+            <div id="featured-block" class="category-block__title">New Arrivals</div>
+            <p>Here are the newest additions for you to shop in 3.</p>
+        </div>
+
+        <div class="continer-fluid mt-5">
+           <!--  <div class="mobile-view-more d-flex justify-content-end px-4">
+                <a href="featured.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
+            </div> -->
+            <div class="store-block">
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/allude_new.png" alt="">
+                        <div class="store-link">
+                            <a href="https://allude.lk/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/allude_logo.png" alt="Allude, dress">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Allude</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/wallace.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://www.wallacecollective.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/wallace_logo.png" alt="Allude, dress">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">The Wallace Collective</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/vyboo.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://vyboo.lk/" target="_blank">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/vyboo_logo.png" alt="Vyboo, t-shirts, plain t-shirts">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">VYBOO</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/joannas.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://joanaas.com/?currency=LKR" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/joannas_logo.png" alt="Allude, dress">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Joanna's</h5>
                 </div>
 
             </div>
@@ -146,7 +210,7 @@
                         <img src="assets/img/stores/will-by-zac.jpg" alt="">
                         <div class="store-link">
                             <a href="https://willbyzac.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/will-by-zac.png" alt="willbyzac, dress, linen">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/wbz_logo.png" alt="willbyzac, dress, linen">
                             </a>
                         </div>
                     </div>
@@ -231,14 +295,14 @@
             <div class="store-block store-page">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/spa-ceylon.jpg" alt="">
+                        <img src="assets/img/stores/LuvEsence.png" alt="">
                         <div class="store-link">
-                            <a href="https://lk.spaceylon.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/spa.png" alt="spaceylon">
+                            <a href="https://www.luvesence.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/luv_esence.png" alt="Luvesence">
                             </a>
                         </div>
                     </div>
-                    <h5 class="store-title mt-3">SPA CEYLON</h5>
+                    <h5 class="store-title mt-3">LuvEsence</h5>
                 </div>
 
                 <div class="store-block__item">
