--- a/src/women.html
+++ b/src/women.html
@@ -62,7 +62,7 @@
                         <img src="assets/img/stores/will-by-zac.jpg" alt="">
                         <div class="store-link">
                             <a href="https://willbyzac.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/will-by-zac.png" alt="willbyzac,designerwear">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/wbz_logo.png" alt="willbyzac,designerwear">
                             </a>
                         </div>
                     </div>
@@ -127,6 +127,66 @@
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Clubhouse Vivaldi</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/joannas.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://joanaas.com/?currency=LKR" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/joannas_logo.png" alt="Allude, dress">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Joanna's</h5>
+                </div>
+
+                 <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/femi.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://femi.lk/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/femi_logo.png" alt="femi,t-shirts, plain t-shirts">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">FEMI</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/wallace.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://www.wallacecollective.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/wallace_logo.png" alt="Allude, dress">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">The Wallace Collective</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/saree_kingdom.png" alt="">
+                        <div class="store-link">
+                            <a href="https://www.sareekingdomkandy.com/" target="_blank">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/saree_kingdom_logo.png" alt="Saree, Wedding Saree, Saree kingdom">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Saree Kingdom</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/allude_women.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://allude.lk/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/allude_logo.png" alt="Allude, dress">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Allude</h5>
                 </div>
             </div>
         </div>
