--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
         <div class="row h-100">
             <div class="col-12 col-md-5 d-flex flex-column justify-content-start justify-content-md-center">
                 <div class="hero-section text-center text-md-start">
-                    <h1 class="hero-heading mb-5 d-none d-md-block">
+                    <h1 class="hero-heading mb-5 d-none d-lg-block">
                         <span>Shop Now</span>.<br>
                         <span>Pay Later.</span>
                     </h1>
-                    <h1 class="my-4 d-md-none">Shop Now. <span>Pay Later.</span></h1>
+                    <h1 class="my-4 d-lg-none">Shop Now. <span>Pay Later.</span></h1>
                 </div>
                 <div class="d-flex align-items-center position-relative d-md-none w-100 hero-img--mobile">
                     <div class="hero-img">
