--- a/src/stores.html
+++ b/src/stores.html
@@ -17,6 +17,9 @@
                 <a href="#featured-block" class="filter-block__slider__item">Featured</a>
             </div>
             <div>
+                <a href="#new-arrivals-block"  class="filter-block__slider__item">New Arrivals</a>
+            </div>
+            <div>
                 <a href="#women-block"  class="filter-block__slider__item">Women</a>
             </div>
             <div>
@@ -96,15 +99,27 @@
 
     <div class="category-block">
         <div class="container">
-            <div id="featured-block" class="category-block__title">New Arrivals</div>
+            <div id="new-arrivals-block" class="category-block__title">New Arrivals</div>
             <p>Here are the newest additions for you to shop in 3.</p>
         </div>
 
         <div class="continer-fluid mt-5">
-           <!--  <div class="mobile-view-more d-flex justify-content-end px-4">
-                <a href="featured.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
-            </div> -->
+            <div class="mobile-view-more d-flex justify-content-end px-4">
+                <a href="new_arrivals.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
+            </div>
             <div class="store-block">
+
+                 <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/delicate.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://delicatesociety.com/" target="_blank">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/delicate_logo.png" alt="Vyboo, t-shirts, plain t-shirts">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Delicate Society </h5>
+                </div>
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
@@ -140,18 +155,6 @@
                         </div>
                     </div>
                     <h5 class="store-title mt-3">VYBOO</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/joannas.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://joanaas.com/?currency=LKR" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/joannas_logo.png" alt="Allude, dress">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Joanna's</h5>
                 </div>
 
             </div>
