--- a/src/women.html
+++ b/src/women.html
@@ -188,6 +188,19 @@
                     </div>
                     <h5 class="store-title mt-3">Allude</h5>
                 </div>
+
+                 <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/delicate.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://delicatesociety.com/" target="_blank">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/delicate_logo.png" alt="Vyboo, t-shirts, plain t-shirts">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Delicate Society </h5>
+                </div>
+                
             </div>
         </div>
     </div>
